<?xml version="1.0" encoding="utf-8"?>
<Spinner xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/nav_spinner"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:dropDownWidth="wrap_content"
    android:gravity="end">

</Spinner>